Project

General

Profile

Actions

Bug #43414

closed

crash in RGWSI_Bucket_SObj::store_bucket_instance_info()

Added by Kefu Chai over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2019-12-23T18:30:06.723 INFO:tasks.rgw.client.0.smithi153.stdout:/usr/include/c++/8/optional:945: constexpr _Tp& std::_Optional_base<_Tp, true, true>::_M_get() [with _Tp = RGWBuc
ketInfo*]: Assertion 'this->_M_is_engaged()' failed.
 ceph version 15.0.0-8769-g0677424 (067742409578fe705cdfd829b53be781fdbe3816) octopus (dev)
 1: (()+0x12d80) [0x7f6776ee1d80]
 2: (gsignal()+0x10f) [0x7f6775aa893f]
 3: (abort()+0x127) [0x7f6775a92c95]
 4: (()+0x30a578) [0x56517a822578]
 5: (RGWSI_Bucket_SObj::store_bucket_instance_info(ptr_wrapper<RGWSI_MetaBackend::Context, 4>&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, RGWBucketInfo&, std::optional<RGWBucketInfo*>, bool, std::chrono::time_point<ceph::time_detail::real_clock, std::chrono::duration<unsigned long, std::ratio<1l, 1000000000l> > >, std::map<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, ceph::buffer::v14_2_0::list, std::less<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::pair<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const, ceph::buffer::v14_2_0::list> > >*, optional_yield)+0x64e) [0x56517acea2ae]
 6: (RGWBucketCtl::do_store_bucket_instance_info(ptr_wrapper<RGWSI_MetaBackend::Context, 4>&, rgw_bucket const&, RGWBucketInfo&, optional_yield, RGWBucketCtl::BucketInstance::PutParams const&)+0xee) [0x56517a9a8b0e]
 7: (()+0x490b89) [0x56517a9a8b89]
 8: (std::_Function_handler<int (RGWSI_MetaBackend_Handler::Op*), RGWBucketInstanceMetadataHandler::call(std::optional<std::variant<RGWSI_MetaBackend_CtxParams_SObj> >, std::function<int (ptr_wrapper<RGWSI_MetaBackend::Context, 4>&)>)::{lambda(RGWSI_MetaBackend_Handler::Op*)#1}>::_M_invoke(std::_Any_data const&, RGWSI_MetaBackend_Handler::Op*&&)+0x36) [0x56517a9bebb6]
 9: (()+0x7de03e) [0x56517acf603e]
 10: (RGWSI_MetaBackend_SObj::call(std::optional<std::variant<RGWSI_MetaBackend_CtxParams_SObj> >, std::function<int (RGWSI_MetaBackend::Context*)>)+0x9e) [0x56517acf8f3e]
 11: (RGWSI_MetaBackend_Handler::call(std::optional<std::variant<RGWSI_MetaBackend_CtxParams_SObj> >, std::function<int (RGWSI_MetaBackend_Handler::Op*)>)+0x5f) [0x56517acf5e6f]
 12: (RGWBucketCtl::store_bucket_instance_info(rgw_bucket const&, RGWBucketInfo&, optional_yield, RGWBucketCtl::BucketInstance::PutParams const&)+0xfc) [0x56517a9a631c]
 13: (RGWBucket::link(RGWBucketAdminOpState&, optional_yield, std::map<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, ceph::buffer::v14_2_0::list, std::less<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::pair<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const, ceph::buffer::v14_2_0::list> > >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*)+0xd7d) [0x56517a9b096d]
 14: (RGWBucketAdminOp::link(rgw::sal::RGWRadosStore*, RGWBucketAdminOpState&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*)+0xb3) [0x56517a9b13e3]
 15: (RGWOp_Bucket_Link::execute()+0x804) [0x56517a8f2ac4]
 16: (rgw_process_authenticated(RGWHandler_REST*, RGWOp*&, RGWRequest*, req_state*, bool)+0xa9b) [0x56517a8eb68b]
 17: (process_request(rgw::sal::RGWRadosStore*, RGWREST*, RGWRequest*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, rgw::auth::StrategyRegistry const&, RGWRestfulIO*, OpsLogSocket*, optional_yield, rgw::dmclock::Scheduler*, int*)+0x2258) [0x56517a8eecd8]
 18: (RGWCivetWebFrontend::process(mg_connection*)+0x3b6) [0x56517a83f2a6]

/a/kchai-2019-12-23_16:20:31-rados-wip-kefu-testing-2019-12-21-0133-distro-basic-smithi/4628474/


Related issues 1 (0 open1 closed)

Has duplicate rgw - Bug #43427: bucket index reshard failsDuplicate

Actions
Actions #1

Updated by Kefu Chai over 4 years ago

  • Has duplicate Bug #43427: bucket index reshard fails added
Actions #2

Updated by Kefu Chai over 4 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Kefu Chai
  • Pull request ID set to 32433
Actions #3

Updated by Abhishek Lekshmanan over 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF